overflow fixed on both tablet and desktop screens

--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,10 @@
     box-sizing: border-box;
 }
 
+section{
+  overflow-x: hidden;
+}
+
 .scoot-jumbotron{
     width: 100%;
     height: 650px;
@@ -100,7 +104,7 @@
         position: absolute;
         width: 234px;
         height: 63px;
-        right: 0;
+        right: -35px;
         bottom: 8%;
     }
 }
@@ -129,12 +133,12 @@
     }
     .scoot-jumbotron .img-2 img{
         width: 180px;
-        right: 0;
+        right: -35px;
         top: 340px;
     }
     .scoot-jumbotron .img-1 img{
-        width: 250px;
-        left: 550px;
+        width: 307px;
+        left: 520px;
         top: 280px;
     }
 }
